Fix telegram "Change" button alignment

--- a/src/styles/_telegram.scss
+++ b/src/styles/_telegram.scss
@@ -62,6 +62,7 @@
         position: absolute;
         right: 0;
         font-size: 1.2rem;
+        line-height: 1.6rem;
         pointer-events: none;
         font-weight: bold;
     }
